--- a/html/blue5.html
+++ b/html/blue5.html
@@ -56,7 +56,6 @@
                 src: url("Helvetica-Condensed.ttf");
             }
 
-
             .font-large-1 {
                 font-size: var(--font-size-large-1);
             }
@@ -68,7 +67,6 @@
             .font-large-3 {
                 font-size: var(--font-size-large-3);
             }
-
 
             @page {
                 size: var(--page-width) var(--page-height);
@@ -82,7 +80,7 @@
                 padding: 0;
             }
 
-
+            /* Header for first page and all other pages */
             @page:first {
                 margin-top: var(--page-margin-top-first-page);
 
@@ -103,10 +101,6 @@
                 font-family: Helvetica;
                 color: var(--text-color);
                 line-height: var(--line-height-default);
-            }
-
-            th {
-                color: red;
             }
 
             /* Lists */
@@ -177,9 +171,7 @@
                 padding-bottom: 1em;
                 display: block;     /* enable page breaks*/
                 margin: auto;       /* and center */
-
             }
-
 
             #md-head1 {string-set: md-head1 content(text)}
             #md-head2 {string-set: md-head2 content(text)}
@@ -189,6 +181,13 @@
             #md-head6 {string-set: md-head6 content(text)}
             #md-head7 {string-set: md-head7 content(text)}
             #md-head8 {string-set: md-head8 content(text)}
+
+            th.colspan3 {
+                text-align: center;
+                color: blue;
+                border: 3px solid pink;
+                padding: 10mm;
+            }
 
         </style>
     </head>
@@ -216,7 +215,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="col1" colspan="3">
+                        <td class="colspan3" colspan="3">
                             Diese Betriebsanleitung gilt für das Arbeiten mit der Gillardon Säulenbohrmaschine
                         </td>
                     </tr>
@@ -344,14 +343,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="col1">
-                            <div class="icon-list-vertical">
-                            </div>    
-                        </td>
-                        <td class="col2">
+                        <td class="colspan3" colspan="3">
                             Bei Störungen oder Auffäligkeiten die Maschine abschalten, sichern und den Vorgesetzen informieren
-                        </td>
-                        <td class="col3">
                         </td>
                     </tr>
                 </tbody>
