added adaptive rendering

--- a/html/blue.html
+++ b/html/blue.html
@@ -199,7 +199,7 @@
                         <div class="list-header">
                             Gefahren durch sich bewegende Maschinenteile
                         </div>
-                        <ul class="standard">
+                        <ul class="standard autofit">
                             <li>Gefahr vom rotierenden Bohrer eingezogen zu werden</li>
                         </ul>
                     </div>
@@ -207,7 +207,7 @@
                         <div class="list-header">
                             Vorsicht vor herumfliegenden Teilen, Werkstücken, Spänen oder Flüssigkeiten
                         </div>
-                        <ul class="standard">
+                        <ul class="standard autofit">
                             <li>Durch diese Gefahr können schwere Verletzungen entstehen.</li>
                             <li>Die Vorhandenen Schutzeinrichtungen sind nicht zu entfernen und die manuellen Schutzeinrichtungen sind nach dem aufspannen des Werkstückes wieder anzubringen.  </li>
                         </ul>
@@ -216,7 +216,7 @@
                         <div class="list-header">
                             Vorsicht vor erhitzten Teilen am Werkstück
                         </div>
-                        <ul class="standard">
+                        <ul class="standard autofit">
                             <li>Entnahme der Werkstücke nur mit Schutzhandschuhen (nur bei stehender Maschine)</li>
                             <li>Durch die Bearbeitung können sich Werkstücke stark erhitzen und es besteht Verbrennungsgefahr.</li>
                         </ul>
@@ -225,7 +225,7 @@
                         <div class="list-header">
                             Vorsicht bei Aufspannarbeiten mit dem Kran
                         </div>
-                        <ul class="standard">
+                        <ul class="standard autofit">
                             <li>Beim auf und abspannen von Werkstücken den Kran immer direkt aus dem Gefahrenbereich fahren.</li>
                             <li>passende Anschlagmittel auswählen und einsetzen</li>
                         </ul>
@@ -252,7 +252,7 @@
                 <div>   
                     <div class="keep-together">
                         <div class="list-header">Vorsicht for herumfliegenden Teil, Werkstücken, Spänen und Flüssigkeiten</div>
-                        <ol class="standard">
+                        <ol class="standard autofit">
                            <li>Selbstschutz beachten</li>
                            <li>Verletzte bergen </li>
                            <li>Verbrennungen kühlen, verletzte Gliedmaßen ruhigstellen</li>
@@ -321,7 +321,7 @@
             </div>
             <div class="container-3">
                 <div></div>
-                <div>
+                <div class="autofit">
                     Bei Störungen oder Auffäligkeiten die Maschine abschalten, sichern und den Vorgesetzen informieren
                 </div>
             </div>
@@ -335,7 +335,7 @@
                 <div class="icon-list-vertical">
                     <img src="icons/binocular.svg">               
                 </div>
-                <div>
+                <div class="autofit">
                     Instandhaltungsarbeiten sind nur durch geschultes und unterwiesenes Personal und keinesfalls durch den Maschinenbediener durchzuführen.
                 </div>
             </div>
